--- a/inventory/templates/inventory/purchase_order_list_new.html
+++ b/inventory/templates/inventory/purchase_order_list_new.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-<button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#addPurchaseOrderModal">
+<button type="button" class="btn btn-success btn-sm" onclick="openAddPurchaseOrderModal()">
     <i class="fas fa-plus"></i> إنشاء طلب شراء
 </button>
 <a href="{% url 'inventory:supplier_list' %}" class="btn btn-primary btn-sm">
@@ -151,9 +151,9 @@
                         <li><a class="dropdown-item" href="#"><i class="fas fa-print"></i> طباعة</a></li>
                     </ul>
                 </div>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addPurchaseOrderModal">
-                    <i class="fas fa-plus"></i> إنشاء طلب شراء
-                </button>
+                                    <button type="button" class="btn btn-success" onclick="openAddPurchaseOrderModal()">
+                        <i class="fas fa-plus"></i> إنشاء طلب شراء
+                    </button>
             </div>
         </div>
         <div class="data-table-body">
@@ -285,68 +285,7 @@
     </div>
 </div>
 
-<!-- Modal إنشاء طلب شراء جديد -->
-<div class="modal fade" id="addPurchaseOrderModal" tabindex="-1" aria-labelledby="addPurchaseOrderModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="addPurchaseOrderModalLabel">إنشاء طلب شراء جديد</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form method="post" action="{% url 'inventory:purchase_order_create' %}">
-                <div class="modal-body">
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="mb-3">
-                                <label for="supplier" class="form-label">المورد</label>
-                                <select class="form-select" id="supplier" name="supplier" required>
-                                    <option value="">اختر المورد</option>
-                                    {% for supplier in suppliers %}
-                                    <option value="{{ supplier.id }}">{{ supplier.name }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="mb-3">
-                                <label for="warehouse" class="form-label">المستودع</label>
-                                <select class="form-select" id="warehouse" name="warehouse" required>
-                                    <option value="">اختر المستودع</option>
-                                    {% for warehouse in warehouses %}
-                                    <option value="{{ warehouse.id }}">{{ warehouse.name }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="mb-3">
-                                <label for="order_date" class="form-label">تاريخ الطلب</label>
-                                <input type="date" class="form-control" id="order_date" name="order_date" value="{{ today|date:'Y-m-d' }}" required>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="mb-3">
-                                <label for="expected_date" class="form-label">تاريخ التسليم المتوقع</label>
-                                <input type="date" class="form-control" id="expected_date" name="expected_date">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="notes" class="form-label">ملاحظات</label>
-                        <textarea class="form-control" id="notes" name="notes" rows="2"></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
-                    <button type="submit" class="btn btn-primary">إنشاء</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+{% include 'inventory/sweetalert2_utils.html' %}
 {% endblock %}
 
 {% block extra_js %}
